TIP529 image metadata: editorial corrections by Andreas and Paul, thank you for that!

--- a/tip/529.md
+++ b/tip/529.md
@@ -1,4 +1,4 @@
-# TIP 529: Add metadata dict property to tk photo image
+# TIP 529: Add metadata dictionary property to tk photo image
     Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
     State:          Draft
     Type:           Project
@@ -11,7 +11,8 @@
 
 # Abstract
 
-An additional property is proposed for photo images to hold a dictionary with image metadata:
+An additional property is proposed for photo images.
+This property shall hold a dictionary with image metadata:
 
     myimage cget -metadata
     myimage configure -metadata [dict create DPI 300.0]
@@ -21,22 +22,22 @@ The content of the dictionary is initialized on image load and used on image sav
 # Rationale
 
 Image files may contain a lot of metadata like resolution, comments, GPS location etc.
-This metadata should be accessible and setable for the following aims:
+This metadata should be accessible and modifiable for the following aims:
 
-   *   Make it available after image load on script level
-   *   Make it setable within the image
-   *   Write its data to the image file.
+  * Make it available after image load on script level
+  * Make it setable within the image
+  * Write its data to the image file.
 
 ## image resolution
 
-This TIP specially targets the resolution (DPI) value of the image.
+This TIP especially targets the resolution (DPI) value of the image.
 
 The image resolution included in an image file is crucial for its usage, as many applications (word & co.) use this field to calculate a default size.
-One may imagine, that image files used in pdf4tcl are automatically scaled at the right resolution (e.g. the resolution saved in the image file).
+One may imagine, that image files used in `pdf4tcl` are automatically scaled to the correct resolution (e.g. the resolution saved in the image file).
 
-This information is included in png files (supported by tk core) and many other image formats included in the Img patch.
+This information is included in `.png` files (supported by core `Tk`) and many other image formats included in the `Img` package.
 
-I authored an extension to the Img patch to specify the dpi field of a bmp file on file writing. The syntax was accorded with Jeff Hobbs:
+I authored an extension to the `Img` package to specify the `dpi` field of a `.bmp` file when writing. The syntax was accorded with Jeff Hobbs:
 
     myimage write file.bmp -format [list bmp -resolution 300 i]
 
@@ -50,19 +51,19 @@ This may be expressed (when all packages are adapted) by:
 A comment may be used to save custom data in the image file.
 
 An example is a vision automation project where a test procedure is connected to each image.
-My solution is to use GIF images and to store the test procedure (a TCL script) in the gif comment.
+My solution is to use `.gif` images and to store the test procedure (a TCL script) in the gif's comment.
 
-## Preview extension for new command "image find"
+## Preview extension for new command "image metadata"
 
-The match functions should also be able to output the metadata dict.
-This is due to the plan by Paul Obermeier to make the match function alone available on the script level.
+The match functions should also be able to return the metadata dictionary.
+This is due to the plan by Paul Obermeier to make the `match` function available on the script level by itself.
 See the discussion section for the message.
 
 # Specification
 
-## Metadata Dict
+## Metadata Dictionary
 
-The propery "**-metadata**" is added to each image.  It contains a dictionary,
+The property "**-metadata**" is added to each image.  It contains a dictionary,
 where the keys of the dictionary are specific to each photo image format.
 
 The following default keys are proposed:
@@ -75,9 +76,9 @@ The following default keys are proposed:
 
 Comments on the key choice:
 
-   *   Abreviation are in upper case
-   *   Words are in Americal English in small case (except propper nouns)
-   *   Vertical DPI is expressed as DPI/aspect. The reason is, that some image formats may feature aspect and no resolution value.
+  * Abreviations are in upper case
+  * Words are in American English, and in lower case (except proper nouns)
+  * Vertical DPI is expressed as `DPI/aspect`. This is because some image formats may feature `aspect`, and no `resolution` value.
 
 It is valid to set any key within the application.
 Any unknown key should be ignored by the application and image format drivers.
@@ -86,8 +87,8 @@ If a particular image does not specify any keys (whether during creation or othe
 
 Each photo image format driver may define additional keys and may decide to use them for input (as a parameter for image read and/or image write), output (as an image read result) or both.
 
-The TIP implementation does not target to implement all possible keys of all image formats for reading and writing immediately.
-The set of predefined image keys may grow over time on a use-case basis.
+The TIP implementation does not propose to immediately implement all possible keys of all image formats for reading and writing.
+The set of predefined image keys may grow over time on a per-case basis instead.
 
 ## Commands
 
@@ -101,12 +102,12 @@ The following commands are extended by a -metadata parameter:
     myimage read -metadata $metadict
     myimage write -metadata $metadict
 
-Any image format handler may use the content of the metadata dict.
+Any image format handler may use the content of the metadata dictionary.
 This may be an ongoing process, especially within the Img package.
 
-Here is an overview, which command reads or sets the metadata dict:
+Here is an overview, which command reads or sets the metadata dictionary:
 
-| Command | Reads current image metadata dict | reads command options metadata dict | Writes current image metadata dict | Driver data merged in |
+| Command | Reads current image metadata dict | Reads command options metadata dict | Writes current image metadata dict | Driver data merged in |
 | :-: | :-: | :-: | :-: | :-: |
 | image create | no | yes | yes | yes |
 | myimage cget | yes | no | no | no |
@@ -118,21 +119,21 @@ Here is an overview, which command reads or sets the metadata dict:
 
 Footnotes:
 
-(1) The current metadata is ignored if a metadata dict is given as command parameter.
+(1) The current metadata is ignored if a metadata dictionary is given as command parameter.
 
-Each command is now discussed within a subchapter:
+Each command is now discussed within its own section:
 
 ### image create
 
-Image create will parse the image data and create the metadata dict of the image.
+The `create` command will parse the image data and create the metadata dictionary of the image.
 
 As an example, a gif file with a comment would create a comment metadata key within the image:
 
     % image create photo myimage -format GIF -file testwithcomment.gif
     % myimage cget -metadata
-    Comment "This is the image comment"
+    Comment {This is the image comment}
 
-A metadata dict given on the command line will be merged with the parsed metadata dict.
+A metadata dictionary given on the command line will be merged with the parsed metadata dictionary.
 The meta data read from the file will be given priority.
 This enables the specification of default values for keys which should be present.
 
@@ -145,81 +146,81 @@ An example with the same image as above:
 
 ### myimage cget
 
-The metadata dict may be retrieved by:
+The metadata dictionary may be retrieved by:
 
     myimage cget -metadata
 
 ### myimage configure
 
-The metadata dict of the image may be overwritten by:
+The metadata dictionary of the image may be overwritten by:
 
     myimage configure -metadata [dict create Comment "Comment from cconfigure"]
 
 The image data is not touched and no image data interpretation is triggered.
 
-The retrival methods will return the metadata dict as for any other option:
+The retrieval methods will return the metadata dictionary as for any other option:
 
     % myimage configure -metadata
-    -metadata {} {} {} {Comment "Current comment"}
+    -metadata {} {} {} {Comment {Current comment}}
 
-Setting one of the -format, -data or -file option to a different value will recreate the image with the new parameters.
-In this case, an eventually present -metadata option will first replace the present metadata of the image.
-Then, the image recreation will take place (using an eventually specified metadata dict) and may add keys to the image metadata dict.
+Setting one of the `-format`, `-data` or `-file` options to a different value will recreate the image with the new parameters.
+In this case, an eventually present `-metadata` option will first replace the present metadata of the image.
+Then, the image recreation will take place (using an eventually specified metadata dictionary) and may add keys to the image metadata dictionary.
 
-It is not possible to trigger an image recreation by just specifying a metadata dict.
+It is not possible to trigger an image recreation by just specifying a metadata dictionary.
 This is to avoid unneeded image recreation.
 
-Note: parameters to change the rendered image should use the -format option. The metadata may provide additional data.
+Note: parameters to change the rendered image should use the `-format` option. The metadata may provide additional data.
 
-When the image is rendered again due to a change of the options -file, -data or -format, the following procedure applies:
+When the image is rendered again due to a change of the options `-file`, `-data` or `-format`, the following procedure applies:
 
-   *   The current image metadata is replaced by an eventually specified metadata.
-   *   The image driver is called with the resulting metadata to render the image.
-   *   Any metadata key outputted by the image driver rendering is set in the image metadata. In consequence, we get a merge of the current and the generated metadata.
+  * The current image metadata is replaced by an eventually specified metadata.
+  * The image driver is called with the resulting metadata to render the image.
+  * Any metadata key returned by the image driver rendering is set in the image metadata. In consequence, we get a merge of the current and the generated metadata.
 
 ### myimage put
 
-The put command sets (parts of) the image data by specified new image data.
+The `put` command sets (parts of) the image data to the specified new image data.
 
-The -metadata property of the image is not changed.
-This is consistent of other parameters like -format.
+The `-metadata` property of the image is not changed.
+This is consistent of other parameters like `-format`.
 
-To replace the whole image including metadata, the configure command may be used by setting the -data option.
+To replace the whole image including metadata, the `configure` command may be used by setting the `-data` option.
 
 Example with gif data containing a comment:
 
     % image create myimage -metadata [dict create Comment "Comment from image create"]
     % myimage put $GIFWithCommentData
     % myimage cget -metadata
-    Comment "Comment from image create"
+    Comment {Comment from image create}
 
-A -metadata option may be specified to support the image read. Nevertheless, this metadata is not included in the metadata property of the image.
+A `-metadata` option may be specified to support the read operation. Nevertheless, this metadata is not included in the metadata property of the image.
 
 Example:
 
     % image create myimage -metadata [dict create Comment "Comment from image create"]
     % myimage put $GIFWithCommentData -metadata [dict create Comment "Comment from put command line"]
     % myimage cget -metadata
-    Comment "Comment from image create"
+    Comment {Comment from image create}
 
 ### myimage read
 
-The read command sets (parts of) the image data by new image data read from a file.
-This command acts like the put command with the difference, that the image data comes from a file.
+The `read` command sets (parts of) the image data to new image data read from a file.
+This command acts like the `put` command, except that the image data comes from a file.
 
-The -metadata property of the image is not changed.
-This is consistent of other parameters like -format.
+The `-metadata` property of the image is not changed.
+This is consistent of other parameters like `-format`.
 
-To replace the whole image including metadata, the configure command may be used by setting the -file option.
+To replace the whole image including metadata, the `configure` command may be used by setting the `-file` option.
 
 Example with a gif file containing a comment:
 
     % image create myimage -metadata [dict create Comment "Comment from image create"]
     % myimage read gifwithcomment.gif
     % myimage cget -metadata
-    Comment "Comment from image create"
+    Comment {Comment from image create}
 
-A -metadata option may be specified to support the image read. Nevertheless, this metadata is not included in the metadata property of the image. There is currently no practical application for this, but there might be examples which use that.
+A `-metadata` option may be specified to support the read operation. Nevertheless, this metadata is not included in the metadata property of the image. There is currently no practical application for this, but there might be examples which use that.
 
 Example:
 
@@ -230,11 +231,11 @@ Example:
 
 ### myimage data
 
-The data command writes the image data into a variable.
+The `data` command writes the image data into a variable.
 
 If the image formats supports a specified metadata key, it is included in the output file.
 
-If a -metadata option is given, the metadata property of the image is ignored.
+If a `-metadata` option is given, the metadata property of the image is ignored.
 Otherwise, the metadata property of the image is used.
 
 Example to write a comment in gif data included in the image properties:
@@ -243,7 +244,7 @@ Example to write a comment in gif data included in the image properties:
     % myimage data -format "GIF"
     ... GIF data with comment included
 
-Example to specify the comment with the command options
+Example to specify the comment with the command options:
 
     % image create myimage -file test.png
     % myimage data -format "GIF"-metadata [dict create Comment "Comment from data command"]
@@ -251,8 +252,8 @@ Example to specify the comment with the command options
 
 ### myimage write
 
-The write command writes the image data to a file.
-With respect to metadata, it works the same way as the data command.
+The `write` command writes the image data to a file.
+With respect to metadata, it works the same way as the `data` command.
 
 Example to write a metadata comment:
 
@@ -262,15 +263,15 @@ Example to write a metadata comment:
 
 ### Notes on Options to image and metadata creation
 
-The metadata is not suited to pass processing options to the driver.
-For this aim, options should be added to the "-format" option.
+The metadata is not suited to passing processing options to the driver.
+Such options should be added to the `-format` option instead.
 
-In contrast, a driver may understand options passed by the "-format" option to modify its metadata processing.
+In contrast, a driver may understand options passed through the `-format` option to modify its metadata processing.
 
 Lets try the following imaginary example:
 An image driver contains a full EXIF parser which creates many keys as output.
-This processing is expensive in processing time and output data creation.
-In consequence, the driver creator may decide to only create the EXIF output on a given option:
+This processing is expensive, in both time and output data creation.
+As a consequence, the driver creator may decide to only create the EXIF output when an option requesting such is specified:
 
     image create photo photo.jpg -format "jpg -exif 1"
 
@@ -278,31 +279,32 @@ In consequence, the driver creator may decide to only create the EXIF output on 
 
 The image format driver interface is changed in the following aspects:
 
-### Pass metadata dict as parameter
+### Pass metadata dictionary as parameter
 
-Each driver function gets a tcl object pointer "metadataIn" as parameter.
-This parameter serves to input a metadata dict to the driver function.
-It may be NULL to flag that the metadata dict is empty.
+Each driver function receives a Tcl object pointer `metadataIn` as parameter.
+This parameter serves to pass a metadata dictionary to the driver function.
+It may be NULL. Doing so indicates that the metadata dictionary is empty.
 
-A typical driver code snipped to check for a metadata key is:
+A typical driver code snippet to check for a metadata key is:
 
     if (NULL != metadataIn) {
         Tcl_Obj *itemData;
         Tcl_DictObjGet(interp, metadataIn, Tcl_NewStringObj("Comment",-1), &itemData));
 
-The receiving of the metadata by the format driver functions is only necessary for the Write functions to fulfill strictly the objective of the TIP.
-Nevertheless, it is implemented the same way as the -format parameter which is available to all functions.
-This allows to pass additional options to the driver only concerning the metadata processing.
+To strictly fulfill the objective of the TIP it is only necessary for the `Write` functions of the format driver to receive metadata.
 
-### Receive a metadata dict from the driver (FileRead,StringRead)
+Nevertheless, it is implemented the same way as the `-format` parameter which is available to all functions.
+This allows the passing of additional options to the driver which only concern the metadata processing.
 
-The image match and read functions (FileMatch, StringMatch, FileRead, StringRead) may set keys in a prepared metadata dict to return them.
-Those function get an additional tcl object pointer as "metadataOut" as parameter.
+### Receive a metadata dictionary from the driver (FileRead,StringRead)
 
-This parameter may be NULL to indicate, that no metadata return is attended (put, read subcommands).
+The image match and read functions (FileMatch, StringMatch, FileRead, StringRead) may set keys in a prepared metadata dictionary to return them.
+These functions receive an additional Tcl object pointer as "metadataOut" as parameter.
 
-This parameter is initialized to an empty unshared dict object if metadata return is attended (image create command, configure subcommand).
-The driver may set dict keys in this object to return metadata.
+This parameter may be NULL. This indicates that no metadata can be returned (`put`, `read` subcommands).
+
+This parameter is initialized to an empty unshared dictionary object if metadata return is intended (`image create` command, `configure` subcommand).
+The driver may set dictionary keys in this object to return metadata.
 
 A sample driver code snippet is:
 
@@ -311,14 +313,19 @@ A sample driver code snippet is:
 
 ### Image format driver interface
 
-For image format drivers, a new registration procedure is proposed which includes functions with the new parameters.
-In addition, the parameters are reordered to always have the order interp, input parameter, output parameter, auxiliary functions.
+For image format drivers a new registration procedure is proposed. This new procedure includes functions with the new parameters.
+In addition, the parameters are reordered to always have the order of
+
+  - interp,
+  - input parameter(s),
+  - output parameter(s),
+  - auxiliary function(s).
 
 The new stubs enabled function is:
 
     void Tk_CreatePhotoImageFormatVersion3(const Tk_PhotoImageFormatVersion3 *formatPtr)
 
-The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
+The function parameters of `Tk_PhotoImageFormatVersion3` are as follows:
 
     int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
             const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
@@ -346,42 +353,44 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 ## Documentation
 
-Documentation is available in doc/photo.n for the script visible changes and doc/CrtPhImgFmt.3 for the C level interface.
+The script-visible changes are documented in the manpage `doc/photo.n`.
+The changes to the C level interface on the other hand are documented in `doc/CrtPhImgFmt.3`.
 
 # Implementation
 
-Implementation is in branch "tip-529-image-metadata-no-match-method".
+The implementation is done in branch `tip-529-image-metadata-no-match-method` of the Tk fossil repository.
 The following metadata keys are implemented:
 
-   * gif: comment
-   * png: DPI, ratio
+  * gif: comment
+  * png: DPI, ratio
 
-Thanks to Paul Obermaier, the TkImg package has implemented the new interface and uses it currently for DPI setting and reporting.
+With thanks to Paul Obermeier, the `Img` package has implemented the new interface and uses it currently for setting and reporting of DPI information.
 
 A set of test cases is included in the implementation.
-In addition, the TkImg package features additional tests for this patch which exercise additional features like stub table, image parameters.
-The TkImg patch links currently against the optional branch (see below), not against the branch tag tip-529-image-metadata-no-match-method.
+In addition, the `Img` package features additional tests for this change which exercise additional features like the stub table and image parameters.
 
-It was necessary to fix the file tests/earth.gif as the file is incomplete.
+Note that the `Img` package currently links against the optional branch (see below), and not against the branch tag `tip-529-image-metadata-no-match-method`.
+This was necessary to fix the file `tests/earth.gif`, as it is incomplete.
 
-Warning: the following chapters "Discussion" and "Rejected alternatives" contain a lot of information not relevant for the TIP.
+__Warning__: The two following chapters ("Discussion" and "Rejected alternatives") contain a lot of information not relevant for the TIP.
 A reader only interested in the functionality of the TIP may stop here.
 
 # Discussion
 
-## image find command planned by Paul Obermeier
+## `image metadata` command planned by Paul Obermeier
 
 What about extending and exposing the functionality of the MatchProc function at the Tcl level?
-That way it would be possible to implement a command like "image info <fileName>", where
-you can retrieve the image size, resolution and additional metadata without explicitely loading
-the image.
-In my image browser (http://www.posoft.de/html/poImgBrowseShots.html#Img1)
-I am currently using a modified version of the Tcllib fileutil::fileType procedure to extract the
+
+That way it would be possible to implement a command like `image metadata <fileName>`, where
+you can retrieve the image size, resolution and additional metadata without explicitely loading the image.
+
+In my image browser ([Screenshot](http://www.posoft.de/html/poImgBrowseShots.html#Img1))
+I am currently using a modified version of Tcllib's `fileutil::fileType` command to extract the
 image size without creating a photo image. Getting that information (and additional metadata)
 directly from the C-based image parsers would be faster and there would be no need to code that
 functionality twice.
 
-This function is implemented in Tk branch "tip-529-image-metadata".
+This function is implemented in Tk branch `tip-529-image-metadata`.
 
 ## Update DPI metadata property on image script
 
@@ -390,7 +399,7 @@ Paul Obermeier has made the following proposal:
 How do you want to handle the physical resolution (DPI) in the case of image scaling?
 Just keep the original DPI value or adjust the DPI values automatically, maybe using an option.
 
-HaO: Currently, this is not prevued and may be implemented by another TIP.
+HaO: Currently, this is not thought out and may be implemented by another TIP.
 
 ## No use of other optional features by Paul Obermeier
 
@@ -399,22 +408,22 @@ The answer was: no, I don't see any use.
 
 # Rejected Alternatives
 
-Within the last two years development process, the following additional ideas were implemented in addition.
-They are all implemented in the tk branch "tip-529-image-metadata-optional".
+Within the last two years of development, the following additional ideas were implemented as well.
+They are all implemented in the Tk branch `tip-529-image-metadata-optional`.
 They are not included in the TIP and not included in the main implementation.
-People may speak up to get any feature back in the main feature branch.
+People may speak up to get any feature back into the main feature branch.
 
 The optional features are:
 
-   *   Implement XMP metadata type for gif.
-   *   Optimize the SVG processing to store the preparsed binary blob in the metadata. This blob may be used for fast scaling of the image.
-   *   Optimize driver internal communication: provide a DString memory to the image format driver to pass data from the match functions to the read functions.
-   *   Optimize file access: allow the image driver to indicate, that the file is not needed any more after the match call.
+  * Implemented XMP metadata type for gif.
+  * Optimized SVG processing to store the preparsed binary blob into the metadata. This blob may be used for fast scaling of the image.
+  * Optimized driver internal communications: Provided a DString structure to the image format driver for the passing of data from the match functions to the read functions.
+  * Optimized file access: Gave the image driver the ability to indicate that the file is not needed any more after the match call.
 
-The following subchapter discuss the optional features.
-The format driver interface with all options is shown in a following additional subchapter.
+The following section discusses these optional features.
+The format driver interface with all options is shown in the section after that.
 
-Another rejected alternative to use only one metadata pointer in the interface is following as last subchapter.
+Another rejected alternative using only one metadata pointer in the interface follows as the last section.
 
 ## XMP data
 
@@ -428,56 +437,56 @@ The metadata key is:
 |:---------:|:----------------:|:---------------------:|
 | `XMP`     | xmp image data   | gif,png               |
 
-XMP support is implemented for gif format.
-Due to missing use case, it was removed from the main branch.
+XMP support is implemented for the `gif` format.
+It was removed from the main branch, due to not having a use case at the moment.
 
 ## SVG optimization by a metadata key holding the preparsed svg blob
 
 ### Rationale
 
-The application is within the current SVG implementation included in Tk8.7a3.
+This is used within the current SVG implementation included in Tk8.7a3.
 
-The used svg routines from the nanosvg project split svg processing into two steps:
+The routines imported from the nanosvg project split SVG processing into two steps:
 
-   *   Step 1: transform the xml data to a binary representation of the splines
-   *   Step 2: render the splines to an image presentation
+  1. Transform the xml data to a binary representation of the splines
+  2. Render the splines to an image presentation
 
-When svg files are loaded by:
+When an SVG file is loaded via
 
     image create photo i1 -file test.svg -format {svg -scaletoheight 16}
 
-then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
+the file is read, the xml data loaded, and processing steps 1 and 2 are performed.
 
-When the image is scaled by:
+When the image is later scaled by:
 
     i1 configure -file "" -data {<svg source="metadata" >} -format {svg -scaletoheight 32}
 
-then the same steps are performed as on image load, while only step 2 would be necessary.
+the same steps are performed as on image load, while only step 2 would be necessary.
 The performance is poor and the file must still be available.
 
-The idea is to store the binary representation of the splines (result of processing step 1) as a key in the **-metadata** dict (say SVGBLOB) and to achieve to only perform step 2 on scaling.
+The idea is to store the binary representation of the splines (result of processing step 1) as a key in the **-metadata** dictionary (say SVGBLOB). This then enables the code to only perform step 2 on scaling.
 
-In addition, svg image may even be "compiled" to the metadata structure, so the following command may work:
+In addition, an svg image may even be "compiled" to the metadata structure, so the following command may work:
 
-    image create i1 -metadata {SVGBLOB ...}  -data {<svg source="metadata" >}-format {svg -scaletoheight 32}
+    image create i1 -metadata {SVGBLOB ...} -data {<svg source="metadata" >} -format {svg -scaletoheight 32}
 
-This will only work within the same patchlevel of TK on the same architecture (endianess, int size) , as the format may change, but it may be useful for example when packing to a starkit.
+While this will only work within the same patchlevel of Tk and on the same architecture (endianess, int size), as the format may change, it may be useful when creating a starkit, for example.
 
-In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
+In my talk at ETCL 2019 I showed an Android GUI where buttons could be scaled by a pinch-to-zoom gesture. The current performance is quite poor.
 
 ### Specification
 
-The svg driver returns a preparsed image blob in the metadata key "SVGBLOB".
-This data is used as image data, if the -data parameter contains the string "\<svg data=\"metadata\" />".
+The SVG driver returns a preparsed image blob in the metadata key "SVGBLOB".
+This data is used as image data, if the `-data` parameter contains the string "\<svg data=\"metadata\" />".
 
 A sample script is as follows:
 
     image create photo foo -data $svggradient -format svg
     foo configure -file "" -data "\<svg data=\\"metadata\\" />" -format "svg -scale 2"
 
-Internally, the driver uses the driver internal DString to communicate between the match and read functions.
+Internally, the driver uses a hidden DString structure to communicate between the match and read functions.
 
-The output of the svg parser is serialized in arrays and put into the memory block.
+The output of the SVG parser is serialized into an array and put into the memory block.
 All functions of the rendering functions dealing with the input data are changed to use the array.
 
 ### Discussion
@@ -488,10 +497,10 @@ So, we have a slowdown for the normal case and no gain for the optimized version
 
 My test script is as follows:
 
-   *   take the file from [https://svgstudio.com/pages/free-sample]
-   *   use the following script:
+  * Take the file from [https://svgstudio.com/pages/free-sample]
+  * Use the following script:
    
-   image create photo foo -file Freesample.svg -format svg
+    image create photo foo -file Freesample.svg -format svg
     proc switch {} {
         foo configure -format {svg -scale 2}
         foo configure -format {svg -scale 1}
@@ -499,7 +508,7 @@ My test script is as follows:
     time switch 100
     40139.367 microseconds per iteration
     
-    * now activate the use of the metadata
+  * Now activate the use of the metadata
     
     foo configure -file "" -data "<svg data=\"metadata\" />" -format "svg"
     38641.935 microseconds per iteration
@@ -508,32 +517,32 @@ For me, even removing the file operations and the parsing should be a magnitude 
 But the facts are different.
 Apparently copying all this data around in addition takes a lot of time.
 And the svg-nano parser is super fast.
-And most processing time is taken by image rendering.
+Most of the processing time is taken by image rendering.
 
 ## Match and read function communication memory
 
-The match functions and the image read functions get an additional parameter "driverInternalPtr" which points to an initialized DString.
-The DString is cleared by the framework.
+The image match and read functions get an additional parameter `driverInternalPtr` which points to an initialized DString structure.
+The DString structure is cleared by the framework.
 
-Using this DString, the driver match function may pass data to its read function.
+Via this DString the driver match function can pass data to its read function.
 
 The rationale is the current implementation of the SVG driver:
 
-   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed.
+  * The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed.
 
-## Flag that the match function does not need the channel any more
+## Indicate that the match function does not need the channel any more
 
-The driver file match function may flag, that it does not need the channel any more.
-Only in this case, the additional output int "closeChannel" should be set to 1.
+The driver file match function may indicate that it does not need the channel any more.
+This is done by setting the additional output int `closeChannel` to `1`.
 In this case, a NULL driver is passed to the read driver function.
 
 The rationale is the current implementation of the SVG driver:
 
-   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
+  * The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
 
 ## Format driver interface with all options
 
-The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
+The function parameters in `Tk_PhotoImageFormatVersion3` are as follows:
 
     int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
         const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
@@ -563,19 +572,20 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
 ## Single metadata parameter for input and output
 
-A first approach was to use one metadata parameter to the format driver functions which allowed combined input and output.
+A first approach was to use one metadata parameter to the format driver functions, combining input and output.
 The properties are:
 
-   *   no new image format definition required.
-   *   it is not possible to inform the driver routines, that no metadata output is expected.
-   *   the image driver function must take care about shared object and create a copy on modification. Thus, a pointer to an object pointer must be passed.
-   *   a metadata must be prepared even if there is no metadata and cleaned after each match round.
+  * No new image format definition required.
+  * It is not possible to tell the driver routines when no metadata output is expected.
+  * The image driver function has to take shared objects into account and create a copy when doing modifications. Thus, a pointer to an object pointer must be passed.
+  * A metadata dictionary must be prepared even if there is no metadata, and also cleaned after each match round.
 
-This solution was not chosen due to the complicated way to set a metadata dict by the format driver functions.
+This solution was not chosen due to the complicated way for the format driver functions to set a metadata dictionary.
 In addition, it is seen as valueable, that the information "no metadata output, please" may be transmitted.
 
-The implementation is in branch "tip-529-image-metadata-jan".
+The implementation is in branch `tip-529-image-metadata-jan`.
 
 # Copyright
 
 This document has been placed in the public domain.
+
