correct author name spelling

--- a/tip/594.md
+++ b/tip/594.md
@@ -1,5 +1,5 @@
 # TIP 594: modernize "file stat" interface
-	Author:         Emiliano Galivan <emilianogavilan@gmail.com>
+	Author:         Emiliano Gavilán <emilianogavilan@gmail.com>
 	Author:         aspect <tcler@abstracted-spleen.org>
 	State:          Draft
 	Type:           Project
