--- a/tip/595.md
+++ b/tip/595.md
@@ -28,8 +28,8 @@ In Tcl 8.7, rename `Tcl_StaticPackage` to `Tcl_StaticLibrary` and
 `Tcl_PackageInitProc` to `Tcl_LibraryInitProc`. Also add the
 following defines in `tcl.h`:
 <pre>
-    #define Tcl_PackageInitProc Tcl_LibraryInitProc
-    #define Tcl_StaticPackage Tcl_StaticLibrary
+    #define Tcl\_PackageInitProc Tcl\_LibraryInitProc
+    #define Tcl\_StaticPackage Tcl\_StaticLibrary
 </pre>
 This way, the new names of the functions already can be used
 in Tcl 8.7, but the functionality stays the same.
