Missing single-quotes

--- a/tip/595.md
+++ b/tip/595.md
@@ -53,10 +53,10 @@ will result in a prefix `Π`, so the initialization function
 
 When using Tcl 9.0, 3 existing library names will be changed:
 
-  * `tcldde14.dll` -> tcl9dde14.dll`
-  * `tclregistry13.dll` -> tcl9registry13.dll`
-  * `tk87.dll` -> tcl9tk87.dll` (on Windows)
-  * `libtk8.7.so` -> libtcl9tk8.7.so` (on UNIX)
+  * `tcldde14.dll` -> `tcl9dde14.dll`
+  * `tclregistry13.dll` -> `tcl9registry13.dll`
+  * `tk87.dll` -> `tcl9tk87.dll` (on Windows)
+  * `libtk8.7.so` -> `libtcl9tk8.7.so` (on UNIX)
 
 This makes it possible to install Tk 8.7 in the same
 directory when compiled for Tcl 8.7 resp 9.0. Since
